Orquestração/ingress_example/ingress_example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game1
  labels:
    app: game1 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: game1 
  template:
    metadata:
      labels:
        app: game1 
    spec:
      containers:
      - image: alexwhen/docker-2048
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game1-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
  selector:
    app: game1
---


---



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: game
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix 
            backend:
              service:
                name: game1-service
                port:
                  number: 80
          - path: /app2
